# ableton-live-deepagent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  run_app.sh
.chainlit/: config.toml
src/: PROMPT.md  __init__.py  ableton_tools.py  agent.py  app.py  llm_factory.py  main.py  models.py  schema_utils.py  settings.py
src/agents/: __init__.py  advisor.py  composer.py  composer_agent.py  drum_composer_agent.py  melody_composer_agent.py  musician.py  producer.py  producer_agent.py
src/prompts/: BASSIST_PROMPT.md  COMPOSER.md  COMPOSER_ADVISOR_PROMPT.md  COMPOSER_AGENT_PROMPT.md  DRUMS_ADVISOR_PROMPT.md  DRUM_COMPOSER_PROMPT.md  GUITARIST_PROMPT.md  HARMONY_ADVISOR_PROMPT.md  LEADS_ADVISOR_PROMPT.md  MELODY_CHORD_COMPOSER_PROMPT.md  MUSICAL_ADVISOR_PROMPT.md  PIANIST_PROMPT.md  PRODUCER.md  PRODUCER_AGENT_PROMPT.md  PRODUCER_PROMPT.md
src/tools/: __init__.py  ableton_tools.py  midi_models.py  midi_utils.py
